Fixed some info section spacing.

--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ html {
 
 .introSection img {
   width: 60%;  // per spec
-  //max-width: 100%;  // scale for resize
-  //height: auto;  // scale for resize
+  max-width: 100%;  // scale for resize
+  height: auto;  // scale for resize
 }
 
 .textArea {
@@ -104,7 +104,8 @@ html {
 .infoSection {
   display: flex;
   flex-direction: row;
-  height: 20rem;
+  height: 60rem;
+  border: medium solid red;  // debug
 }
 
 .mainInfo {
@@ -128,10 +129,11 @@ html {
   width: 26.4375rem;
 }
 
-.info img {
+.info img desktop {  // question: when do I use img.desktop
   width: 35%;
   max-width: 100%;
   height: auto;
+  padding-top: 1rem;  // per spec
 }
 
 .mobile {
@@ -161,16 +163,26 @@ html {
   .mainInfo.desktop {
     display: none;
   }
-  .info img .desktop {
+  .info img.desktop {
     display: none;
   }
-  .info img .mobile {
+  .info img.mobile {
     display: block;
+    width: 100%;
+    height: auto;
+    margin-top: 1rem;
   }
   .info h4.desktop {
     display: none;
   }
+  .info h6.desktop {
+    display: none;
+  }
   .info h4.mobile {
+    display: block;
+    padding: 1rem 1rem 1rem 2rem;
+  }
+  .info h6.mobile {
     display: block;
   }
   .info {
